--- a/cycloid/MainPage.xaml
+++ b/cycloid/MainPage.xaml
@@ -715,7 +715,7 @@
                     Margin="10"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
-                    GoogleApiKey="{cycloid:ConfigurationValue Key=Google:ServiceApiKey}"
+                    GoogleApiKey="{cycloid:ConfigurationValue Key=GoogleServiceApiKey}"
                     Point="{x:Bind Mode=OneWay, Path=ViewModel.CurrentPoint}"
                     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNot(ViewModel.IsEditMode)}" />
 
