--- a/cycloid/Controls/InfoToggleButton.xaml
+++ b/cycloid/Controls/InfoToggleButton.xaml
@@ -8,6 +8,7 @@
 
     <UserControl.Resources>
         <ResourceDictionary>
+            <x:Double x:Key="SplitButtonPrimaryButtonSize">32</x:Double>
             <x:Double x:Key="SplitButtonSecondaryButtonSize">18</x:Double>
             <Thickness x:Key="ButtonPadding">0</Thickness>
         </ResourceDictionary>
