--- a/cycloid/MainPage.xaml
+++ b/cycloid/MainPage.xaml
@@ -17,16 +17,16 @@
 
                     <cycloid:ViewModel x:Name="ViewModel" />
 
-                    <Style BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
+                    <Style BasedOn="{StaticResource DefaultAppBarButtonStyle}" TargetType="AppBarButton">
+                        <Setter Property="Width" Value="56" />
+                    </Style>
+
+                    <Style x:Key="SmallButtonStyle" BasedOn="{StaticResource DefaultButtonStyle}" TargetType="Button">
                         <Setter Property="Width" Value="32" />
                         <Setter Property="Height" Value="28" />
                         <Setter Property="Padding" Value="0" />
                     </Style>
                     
-                    <Style BasedOn="{StaticResource DefaultAppBarButtonStyle}" TargetType="AppBarButton">
-                        <Setter Property="Width" Value="56" />
-                    </Style>
-
                     <Style BasedOn="{StaticResource DefaultToggleButtonStyle}" TargetType="ToggleButton">
                         <Setter Property="Width" Value="32" />
                         <Setter Property="Height" Value="28" />
@@ -751,7 +751,11 @@
 
             </Grid>
 
-            <controls:Profile Grid.Row="1" Grid.Column="1" />
+            <controls:Profile Grid.Row="1" Grid.Column="1">
+                <controls:Profile.Resources>
+                    <Style BasedOn="{StaticResource SmallButtonStyle}" TargetType="Button" />
+                </controls:Profile.Resources>
+            </controls:Profile>
 
         </Grid>
 
