--- a/cycloid/MainPage.xaml
+++ b/cycloid/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<UserControl
     x:Class="cycloid.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,16 +9,14 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     Loaded="Page_Loaded">
 
-    <Page.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
 
-                    <cycloid:ViewModel x:Name="ViewModel" />
-
                     <Thickness x:Key="TitleBarMargin">8,0,0,0</Thickness>
-                    
+
                     <Style BasedOn="{StaticResource DefaultAppBarButtonStyle}" TargetType="AppBarButton">
                         <Setter Property="Width" Value="56" />
                     </Style>
@@ -102,7 +100,7 @@
             </ResourceDictionary.ThemeDictionaries>
 
         </ResourceDictionary>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -118,9 +116,7 @@
                 Height="48"
                 Background="Transparent" />
 
-            <Grid
-                x:Name="TitleBarControlsRoot"
-                ColumnSpacing="4">
+            <Grid x:Name="TitleBarControlsRoot" ColumnSpacing="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition x:Name="TitleColumn" Width="219" />
                     <ColumnDefinition Width="184" />
@@ -239,49 +235,12 @@
                 Grid.Column="0"
                 RowSpacing="10">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" Orientation="Horizontal">
-                    <AppBarButton
-                        Command="{x:Bind ViewModel.OpenTrackCommand}"
-                        Icon="OpenLocal"
-                        Label="Open">
-                        <AppBarButton.KeyboardAccelerators>
-                            <KeyboardAccelerator Key="O" Modifiers="Control" />
-                        </AppBarButton.KeyboardAccelerators>
-                    </AppBarButton>
-                    <AppBarButton
-                        Command="{x:Bind ViewModel.NewTrackCommand}"
-                        Icon="NewFolder"
-                        Label="New">
-                        <AppBarButton.KeyboardAccelerators>
-                            <KeyboardAccelerator Key="N" Modifiers="Control" />
-                        </AppBarButton.KeyboardAccelerators>
-                    </AppBarButton>
-                    <AppBarButton
-                        Command="{x:Bind ViewModel.SaveTrackAsCommand}"
-                        Icon="SaveLocal"
-                        Label="Save As">
-                        <AppBarButton.KeyboardAccelerators>
-                            <KeyboardAccelerator Key="S" Modifiers="Control" />
-                        </AppBarButton.KeyboardAccelerators>
-                    </AppBarButton>
-                    <AppBarButton
-                        Command="{x:Bind Mode=OneTime, Path=ViewModel.ExportCommand}"
-                        Icon="CellPhone"
-                        Label="Export">
-                        <AppBarButton.KeyboardAccelerators>
-                            <KeyboardAccelerator Key="E" Modifiers="Control" />
-                        </AppBarButton.KeyboardAccelerators>
-                    </AppBarButton>
-                </StackPanel>
-
                 <mux:TabView
                     x:Name="TabView"
-                    Grid.Row="1"
                     VerticalAlignment="Stretch"
                     IsAddTabButtonVisible="False"
                     SelectedItem="{x:Bind Mode=TwoWay, Path=GetTabItem(ViewModel.Mode), BindBack=GetMode}"
@@ -708,7 +667,7 @@
                 </mux:TabView>
 
                 <TextBlock
-                    Grid.Row="2"
+                    Grid.Row="1"
                     Margin="5,0,0,2"
                     FontSize="11"
                     Text="{x:Bind Mode=OneWay, Path=ViewModel.Status}" />
@@ -763,4 +722,4 @@
 
     </Grid>
 
-</Page>
+</UserControl>
